# Cuttle

./: .gitattributes  .gitignore  DEMO_VIDEO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  implementation_plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
examples/: README.md  bug-report-transcript.txt  cart-cache-mid.txt  payment-idempotency-senior.txt  task-list-student.txt
release/: JUDGE_TESTING.md  README.md  SHA256SUMS.txt
release/Cuttle-windows-x64/: JUDGE_TESTING.md
release/PatchTrail-windows-x64/: JUDGE_TESTING.md  PACKAGE_INFO.txt
release/PatchTrail-windows-x64/examples/: README.md  profile-api-junior.txt
release/PatchTrail-windows-x64/examples/checkout-reliability/: bug-report-transcript.txt
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
