[package]
name = "patchtrail"
version = "0.1.0"
description = "A local-first engineering workspace for bug triage and safe Git recovery"
authors = ["Cuttle"]
edition = "2021"

[lib]
name = "patchtrail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
